--- a/service_input/Dockerfile
+++ b/service_input/Dockerfile
@@ -4,7 +4,7 @@ COPY ../go.mod ../go.sum ./
 RUN go mod download
 
 COPY . ./
-WORKDIR /app/servicea
+WORKDIR /app/service_input
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /app/servicea
 
 FROM scratch
