--- a/service_orchestrator/Dockerfile
+++ b/service_orchestrator/Dockerfile
@@ -4,7 +4,7 @@ COPY ../go.mod ../go.sum ./
 RUN go mod download
 
 COPY . ./
-WORKDIR /app/serviceb
+WORKDIR /app/service_orchestrator
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /app/serviceb
 
 FROM scratch
